@startuml MPD-Billetterie-Schema

scale 0.7

package "Base de Données PostgreSQL - Système de Billetterie" {
    
    class "users" as users <<table>> {
        + id : UUID <<PK>>
        --
        * email : VARCHAR(255) <<UNIQUE>>
        name : VARCHAR(255)
        * password : VARCHAR(255)
        is_verified : BOOLEAN := FALSE
        email_verified_at : TIMESTAMPTZ
        last_login : TIMESTAMPTZ
        password_changed_at : TIMESTAMPTZ := NOW()
    * role : ROLE := 'USER'
        metadata : JSONB
        * created_at : TIMESTAMPTZ := NOW()
        * updated_at : TIMESTAMPTZ := NOW()
        --
        <<indexes>>
        idx_users_email
        idx_users_role
        --
        <<constraints>>
        email UNIQUE
        password NOT NULL
        --
    <<triggers>>
    update_updated_at (optionnel)
    }

    class "organizers" as organizers <<table>> {
        + id : UUID <<PK>>
        --
        * name : VARCHAR(255)
        * created_at : TIMESTAMPTZ := NOW()
        * updated_at : TIMESTAMPTZ := NOW()
        --
    <<triggers>>
    update_updated_at (optionnel)
    }

    class "events" as events <<table>> {
        + id : UUID <<PK>>
        --
        * title : VARCHAR(255)
        description : TEXT
        * date : TIMESTAMPTZ
        * location : VARCHAR(255)
        max_capacity : INTEGER
        * is_published : BOOLEAN := FALSE
        * is_cancelled : BOOLEAN := FALSE
        * allow_anonymous_purchase : BOOLEAN := FALSE
        * allow_transfer : BOOLEAN := FALSE
        * organizer_id : UUID <<FK>>
        category_id : UUID <<FK>>
        venue_id : UUID <<FK>>
        theme_id : UUID <<FK>>
        metadata : JSONB
        * created_at : TIMESTAMPTZ := NOW()
        * updated_at : TIMESTAMPTZ := NOW()
        --
        <<indexes>>
        idx_events_organizer_id
        idx_events_category_id
        idx_events_venue_id
        idx_events_date
        idx_events_is_published
        idx_events_date_published (composite)
    --
    <<constraints>>
    ' À implémenter en SQL si souhaité:
    ' chk_event_date_future
    ' chk_event_not_published_if_cancelled
    --
    <<triggers>>
    ' À implémenter en SQL:
    ' update_updated_at
    }

    class "orders" as orders <<table>> {
        + id : UUID <<PK>>
        --
        * user_id : UUID <<FK>>
        * total_price : DECIMAL(10,2)
        * status : ORDER_STATUS
        promo_code : VARCHAR(50)
        discount_amount : DECIMAL(10,2)
        * currency : VARCHAR(3) := 'EUR'
        metadata : JSONB
        * created_at : TIMESTAMPTZ := NOW()
        * updated_at : TIMESTAMPTZ := NOW()
        --
        <<indexes>>
        idx_orders_user_id
        idx_orders_status
        idx_orders_user_status (composite)
        --
        <<constraints>>
        total_price >= 0
        chk_order_discount
        --
        <<triggers>>
        update_updated_at
    }

    class "tickets" as tickets <<table>> {
        + id : UUID <<PK>>
        --
        user_id : UUID <<FK>>
        * event_id : UUID <<FK>>
        order_id : UUID <<FK>>
        * code : VARCHAR(255) <<UNIQUE>>
        * status : TICKET_STATUS := 'paid'
        seat_number : VARCHAR(50)
        current_qr_code : TEXT
        qr_code_generated_at : TIMESTAMPTZ
        * qr_rotation_interval : INTEGER := 12
        * is_scanned : BOOLEAN := FALSE
        scanned_at : TIMESTAMPTZ
        used_at : TIMESTAMPTZ
        * purchased_at : TIMESTAMPTZ := NOW()
        metadata : JSONB
        --
        <<indexes>>
        idx_tickets_user_id
        idx_tickets_event_id
        idx_tickets_order_id
        idx_tickets_code
        idx_tickets_status
        idx_tickets_event_status (composite)
        idx_tickets_active (partial)
        --
    <<constraints>>
    code UNIQUE
    ' À implémenter en SQL si souhaité:
    ' chk_ticket_used_date
    ' chk_ticket_scanned_date
    --
    <<triggers>>
    ' À implémenter en SQL:
    ' generate_ticket_code
    }

    class "payments" as payments <<table>> {
        + id : UUID <<PK>>
        --
        * order_id : UUID <<FK,UNIQUE>>
        * payment_method : VARCHAR(100)
        * payment_status : VARCHAR(100)
        * payment_date : TIMESTAMPTZ
        * transaction_id : VARCHAR(255)
        * currency : VARCHAR(3) := 'EUR'
        --
        <<indexes>>
        idx_payments_order_id
    --
    <<constraints>>
    order_id UNIQUE
    }

    class "categories" as categories <<table>> {
        + id : UUID <<PK>>
        --
        * name : VARCHAR(255) <<UNIQUE>>
        --
        <<indexes>>
        idx_categories_name
        --
        <<constraints>>
        name UNIQUE
    }

    class "venues" as venues <<table>> {
        + id : UUID <<PK>>
        --
        * name : VARCHAR(255)
        * address : TEXT
        * capacity : INTEGER
        --
        <<constraints>>
        capacity > 0
    }

    class "themes" as themes <<table>> {
        + id : UUID <<PK>>
        --
        * name : VARCHAR(255)
        description : TEXT
        * image_path : VARCHAR(500)
        color : VARCHAR(7)
        metadata : JSONB
        * created_at : TIMESTAMPTZ := NOW()
        * updated_at : TIMESTAMPTZ := NOW()
        --
    <<constraints>>
    ' À implémenter en SQL:
    ' color ~ '^#[0-9A-Fa-f]{6}$'
    --
    <<triggers>>
    ' À implémenter en SQL:
    ' update_updated_at
    }

    class "reviews" as reviews <<table>> {
        + id : UUID <<PK>>
        --
        * user_id : UUID <<FK>>
        * event_id : UUID <<FK>>
        * rating : INTEGER
        comment : TEXT
        * created_at : TIMESTAMPTZ := NOW()
        --
        <<indexes>>
        idx_reviews_user_id
        idx_reviews_event_id
        --
    <<constraints>>
    ' À implémenter en SQL:
    ' rating BETWEEN 1 AND 5
    UNIQUE(user_id, event_id)
    }

    class "team_members" as team_members <<table>> {
        + id : UUID <<PK>>
        --
        * organizer_id : UUID <<FK>>
        * user_id : UUID <<FK>>
        * role : VARCHAR(100)
        * joined_at : TIMESTAMPTZ := NOW()
        --
        <<indexes>>
        idx_team_members_organizer_id
        idx_team_members_user_id
        --
        <<constraints>>
        UNIQUE(organizer_id, user_id)
    }
}

' Relations avec contraintes référentielles - Page 1
orders }o--|| users : "user_id"
tickets }o--|| users : "user_id"
tickets }o--|| orders : "order_id"

payments ||--|| orders : "order_id"

' Notes techniques - Page 1
note right of tickets : Fonctionnalités :\n- Code auto-généré\n- QR Code rotatif\n- Achat anonyme possible

note right of orders : États de commande :\n- draft\n- pending_payment\n- paid\n- cancelled

note left of payments : Relation 1:1 avec orders\nUne commande = un paiement max

newpage

package "Base de Données PostgreSQL - Événements & Organisateurs" {

    class "events" as events2 <<table>> {
        + id : UUID <<PK>>
    }

    class "organizers" as organizers2 <<table>> {
        + id : UUID <<PK>>
    }

    class "categories" as categories2 <<table>> {
        + id : UUID <<PK>>
    }

    class "venues" as venues2 <<table>> {
        + id : UUID <<PK>>
    }

    class "themes" as themes2 <<table>> {
        + id : UUID <<PK>>
    }

    class "reviews" as reviews2 <<table>> {
        + id : UUID <<PK>>
    }

    class "team_members" as team_members2 <<table>> {
        + id : UUID <<PK>>
    }

    class "users" as users_ref1 <<table>> {
        + id : UUID <<PK>>
    }
}

' Relations avec contraintes référentielles - Page 2
events2 }o--|| organizers2 : "organizer_id"
events2 }o--|| categories2 : "category_id"
events2 }o--|| venues2 : "venue_id"
events2 }o--|| themes2 : "theme_id"

reviews2 }o--|| users_ref1 : "user_id"
reviews2 }o--|| events2 : "event_id"

team_members2 }o--|| organizers2 : "organizer_id"
team_members2 }o--|| users_ref1 : "user_id"

' Notes techniques - Page 2
note right of events2 : Contraintes métier :\n- Date future\n- Pas publié si annulé\n- Capacité > 0

newpage

package "Base de Données PostgreSQL - Sessions & Activités" {

    class "users" as users2 <<table>> {
        + id : UUID <<PK>>
    }

    class "user_sessions" as user_sessions <<table>> {
        + id : UUID <<PK>>
        user_id : UUID <<FK>>
        token : VARCHAR(255) <<UNIQUE>>
        ip_address : VARCHAR(255)
        user_agent : TEXT
        device_info : TEXT
        created_at : TIMESTAMPTZ
        last_activity_at : TIMESTAMPTZ
        expires_at : TIMESTAMPTZ
        is_active : BOOLEAN
        destroyed_at : TIMESTAMPTZ
        destroy_reason : TEXT
        --
        <<indexes>>
        idx_user_sessions_user_id
        idx_user_sessions_token
    }

    class "activity_logs" as activity_logs <<table>> {
        + id : UUID <<PK>>
        user_id : UUID <<FK>>
        action : VARCHAR(255)
        target_type : VARCHAR(100)
        target_id : VARCHAR(255)
        timestamp : TIMESTAMPTZ
        --
        <<indexes>>
        idx_activity_logs_user_id
        idx_activity_logs_timestamp
    }

    class "event_logs" as event_logs <<table>> {
        + id : UUID <<PK>>
        user_id : UUID <<FK>>
        type : VARCHAR(100)
        context : TEXT
        created_at : TIMESTAMPTZ
        --
        <<indexes>>
        idx_event_logs_user_id
        idx_event_logs_type
    }

    class "notifications" as notifications <<table>> {
        + id : UUID <<PK>>
        user_id : UUID <<FK>>
        type : VARCHAR(100)
        message : TEXT
        is_read : TIMESTAMPTZ
        sent_at : TIMESTAMPTZ
        --
        <<indexes>>
        idx_notifications_user_id
    }
}

' Relations - Page 3
user_sessions }o--|| users2 : "user_id"
activity_logs }o--|| users2 : "user_id"
event_logs }o--|| users2 : "user_id"
notifications }o--|| users2 : "user_id"

' Notes - Page 3
note right of user_sessions : Gestion des sessions utilisateur\navec tracking IP et device\nExpiration automatique

note bottom of notifications : Système de notifications\navec suivi de lecture

newpage

package "Base de Données PostgreSQL - Sécurité Utilisateurs" {

    class "users" as users3 <<table>> {
        + id : UUID <<PK>>
    }

    class "blocked_users" as blocked_users <<table>> {
        + id : UUID <<PK>>
        user_id : UUID <<FK,UNIQUE>>
        reason : TEXT
        blocked_at : TIMESTAMPTZ
        --
        <<constraints>>
        user_id UNIQUE
    }

    class "password_history" as password_history <<table>> {
        + id : UUID <<PK>>
        user_id : UUID <<FK>>
        password_hash : TEXT
        created_at : TIMESTAMPTZ
        --
        <<indexes>>
        idx_password_history_user_id
    }

    class "login_attempts" as login_attempts <<table>> {
        + id : UUID <<PK>>
        user_id : UUID <<FK>>
        email : VARCHAR(255)
        ip_address : VARCHAR(64)
        user_agent : TEXT
        success : BOOLEAN
        timestamp : TIMESTAMPTZ
        reason : TEXT
        session_id : VARCHAR(255)
        risk_score : INTEGER
        --
        <<indexes>>
        idx_login_attempts_user_id
        idx_login_attempts_email
        idx_login_attempts_timestamp
    }

    class "blocked_ip" as blocked_ip <<table>> {
        + id : UUID <<PK>>
        ip_address : VARCHAR(64) <<UNIQUE>>
        reason : TEXT
        blocked_at : TIMESTAMPTZ
        expires_at : TIMESTAMPTZ
        block_count : INTEGER
        unblocked_by : VARCHAR(255)
        unblocked_at : TIMESTAMPTZ
        --
        <<constraints>>
        ip_address UNIQUE
    }
}

' Relations - Page 4
blocked_users }o--|| users3 : "user_id"
password_history }o--|| users3 : "user_id"
login_attempts }o--|| users3 : "user_id"

' Notes - Page 4
note right of blocked_users : Utilisateurs bloqués\navec raison

note right of password_history : Historique des mots de passe\npour éviter la réutilisation

note bottom of blocked_ip : Système de blocage IP\navec expiration automatique

newpage

package "Base de Données PostgreSQL - Logs & Audit" {

    class "security_logs" as security_logs <<table>> {
        + id : UUID <<PK>>
        type : VARCHAR(100)
        ip : VARCHAR(64)
        user_agent : TEXT
        url : TEXT
        user_id : UUID
        data : TEXT
        timestamp : TIMESTAMPTZ
        --
        <<indexes>>
        idx_security_logs_type
        idx_security_logs_timestamp
        idx_security_logs_user_id
    }

    class "audit_logs" as audit_logs <<table>> {
        + id : UUID <<PK>>
        action : VARCHAR(100)
        resource_type : VARCHAR(50)
        resource_id : VARCHAR(255)
        user_id : UUID
        user_email : VARCHAR(255)
        ip_address : VARCHAR(64)
        user_agent : TEXT
        details : TEXT
        timestamp : TIMESTAMPTZ
        session_id : VARCHAR(255)
        result : VARCHAR(20)
        risk_level : VARCHAR(20)
        event_hash : VARCHAR(64)
        is_sensitive : BOOLEAN
        --
        <<indexes>>
        idx_audit_logs_user_id
        idx_audit_logs_timestamp
        idx_audit_logs_resource
    }
}

' Notes - Page 5
note right of security_logs : Logs de sécurité détaillés\npour analyse forensique\nTracking complet des actions

note bottom of audit_logs : Logs d'audit complets\navec hash pour intégrité\nRisk level pour alertes

newpage

package "Base de Données PostgreSQL - Système & i18n" {

    class "system_backups" as system_backups <<table>> {
        + id : UUID <<PK>>
        type : VARCHAR(50)
        status : VARCHAR(50)
        file_path : TEXT
        encryption_key : TEXT
        file_size : BIGINT
        checksum_sha256 : VARCHAR(64)
        started_at : TIMESTAMPTZ
        completed_at : TIMESTAMPTZ
        error : TEXT
        retention_days : INTEGER
        --
        <<indexes>>
        idx_system_backups_status
        idx_system_backups_started_at
    }

    class "translations" as translations <<table>> {
        + id : UUID <<PK>>
        entity_type : VARCHAR(100)
        entity_id : VARCHAR(255)
        locale : VARCHAR(10)
        field : VARCHAR(100)
        value : TEXT
        --
        <<indexes>>
        idx_translations_entity
        idx_translations_locale
        --
        <<constraints>>
        UNIQUE(entity_type, entity_id, locale, field)
    }
}

' Notes - Page 6
note right of system_backups : Gestion des sauvegardes\navec chiffrement et checksum\nRétention configurable

note bottom of translations : Système i18n\nTraductions par entité\net par locale

@enduml